# llm-benchmark

./: README.md  classification.py  pyproject.toml  tasks.json
llms/: __init__.py  base_llm.py  gemini.py  gpt.py  llama_gcp.py  llamacpp.py  mistral_preview.py  mixin.py
