[tool.poetry]
name = "llm-benchmark"
version = "0.1.0"
description = ""
authors = ["Antoine Déchappe <dechantoine@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.6.1"
instructor = "^0.4.5"
loguru = "^0.7.2"
google-cloud-bigquery = "^3.14.1"
google-cloud-storage = "^2.14.0"
pandas = "^2.1.4"
db-dtypes = "^1.2.0"
more-itertools = "^10.1.0"
jupyter = "^1.0.0"
scikit-learn = "^1.3.2"
plotly = "^5.18.0"
google-cloud-aiplatform = "^1.38.1"
pydantic = "^2.5.3"
matplotlib = "^3.8.2"
google-api-python-client = "^2.116.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
setuptools = "^69.0.3"
llama-cpp-python = "^0.2.43"
huggingface-hub = "^0.20.3"
retry = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
